# WindowsClear

./: .gitignore  Cargo.toml  README.md  README_EN.md
.github/workflows/: release.yml
src/: main.rs
src/core/: config.rs  history.rs  i18n.rs  mod.rs  mover.rs  proc_mgr.rs  scanner.rs
