[package]
name = "cpan_mover"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
walkdir = "2.3"
rayon = "1.7"
anyhow = "1.0"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_RestartManager", "Win32_System_Memory", "Win32_Storage_FileSystem"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14" # Rust File Dialog
chrono = "0.4" # For caching timestamps

# 优化发布构建体积和速度
[profile.release]
opt-level = 2 # 快速而合理的优化
lto = true
codegen-units = 1
strip = true
